<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_1">1</string>
    <string name="DIV">/</string>
    <string name="EQU">=</string>
    <string name="MUL">*</string>
    <string name="SUB">-</string>
    <string name="ADD">+</string>
    <string name="DOT">.</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="c">C</string>
    <string name="neg">+/-</string>
    <string name="pr">%</string>
</resources>
