<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/displayLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9" />

            <Button
                android:id="@+id/buttonDOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DOT" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD" />

            <Button
                android:id="@+id/buttonSUB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SUB" />

            <Button
                android:id="@+id/buttonMUL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MUL" />

            <Button
                android:id="@+id/buttonDIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DIV" />

            <Button
                android:id="@+id/buttonEQU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EQU" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>